--- a/views/404.ejs
+++ b/views/404.ejs
@@ -39,9 +39,6 @@
     </style>
 
     <div class="fourohfour">
-      <div class="ocean">
-        <img class="fishy" src="http://sailsjs.org/images/fishy4.png">
-      </div>
 
       <div class="main">
         <h1>
@@ -55,14 +52,8 @@
           <% } %>
         </h2>
         <p class="help">
-          <a href="http://en.wikipedia.org/wiki/HTTP_404">Why</a> might this be happening?
+          <a href="brianphiri.9523@gmail.com">Why</a> might this be happening?
         </p>
-      </div>
-
-      <div class="logo">
-        <a href="http://sailsjs.org">
-          <img src="http://sailsjs.org/images/logo.png">
-        </a>
       </div>
     </div>
 
